platform/kubernetes/ollama/04-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ollama
  namespace: ollama
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ollama.wind.etherport.net`)
      kind: Rule
      services:
        - name: ollama
          port: 11434
  tls: {}
